--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+Sorry for all the kludge.
+
+-- Bora
+-->
+
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -26,13 +32,11 @@
   <meta name="apple-mobile-web-app-title" content="System 7">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <meta name="description" content="This pair of compilation hard drives contains a full copy of MacOS 7.0.1, along with a range of games, applications, utilities and toys to demonstrate the...">
-  <meta property="og:title" content="MacOS System 7.0.1 Compilation : Apple Computer : Free Download, Borrow, and Streaming : Internet Archive">
-  <meta property="og:description" content="This pair of compilation hard drives contains a full copy of MacOS 7.0.1, along with a range of games, applications, utilities and toys to demonstrate the...">
-  <meta property="og:site_name" content="Internet Archive">
-  <meta property="og:image" content="https://archive.org/services/img/mac_MacOS_7.0.1_compilation">
-  <meta property="og:url" content="https://archive.org/details/mac_MacOS_7.0.1_compilation">
-  <link rel="canonical" href="https://archive.org/details/mac_MacOS_7.0.1_compilation">
+  <meta name="description" content="A System 7 (aka Mac OS 7) emulator for mobile devices.">
+  <meta property="og:title" content="System 7 - labs.boramalper.org">
+  <meta property="og:description" content="A System 7 (aka Mac OS 7) emulator for mobile devices.">
+  <meta property="og:site_name" content="labs.boramalper.org">
+  <meta property="og:image" content="https://boramalper.github.io/system-7/apple-touch-icon.png">
 
   <link href="index_files/archive.css" rel="stylesheet" type="text/css">
   </head>
